--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
 script:
   - cd tests
   - python download-test-images.py --dftt
-  - pytest
+  - sudo -E pytest
   - cd ..
   - python setup.py sdist bdist_wheel
 
