--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ install:
 script:
   - cd tests
   - python download-test-images.py --dftt
-  - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
+#  - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
+  - pytest
   - cd ..
   - python setup.py sdist bdist_wheel
 
