--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,7 @@ install:
 script:
   - cd tests
   - python download-test-images.py --dftt
-#  - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
-  - pytest
+  - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
   - cd ..
   - python setup.py sdist bdist_wheel
 
