--- a/.gitignore
+++ b/.gitignore
@@ -106,5 +106,13 @@ venv.bak/
 # PyCharm
 .idea
 
+# vim
+*~
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
 test_images/
 .vagrant/
