Add sqlite3 package to CI environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
     - open-vm-tools
     - qemu-utils
     - sleuthkit
+    - sqlite3
     - squashfs-tools
     - vmfs-tools
     - xfsprogs
