Add more CI tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,13 @@ install:
   - pip install -e .
 
 script:
+  - pwd
   - cd tests
   - python download-test-images.py --dftt
+  - ls -la
   - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
+  - ls -la
+  - sqlite3 database.db ".headers on" ".mode column" "SELECT * FROM disk_images;"
   - cd ..
   - python setup.py sdist bdist_wheel
 
