--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ script:
   - sudo -E /home/travis/virtualenv/python3.7/bin/pytest
   - ls -la
   - sqlite3 database.db ".headers on" ".mode column" "SELECT * FROM disk_images;"
+  - sqlite3 database.db ".headers on" ".mode column" "SELECT * FROM mount_status_codes;"
   - cd ..
   - python setup.py sdist bdist_wheel
 
