--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,10 @@ license_file = LICENSE
 [bdist_wheel]
 universal = 1
 
+[options]
+package_dir=
+    =src
+packages=find:
+
+[options.packages.find]
+where=src
