Removed duplicate run in pip step.

--- a/.github/workflows/thumbtack-actions.yml
+++ b/.github/workflows/thumbtack-actions.yml
@@ -7,5 +7,4 @@ jobs:
       - name: Install apt dependencies
         run: apt update && apt-get install afflib-tools archivemount avfs cryptsetup disktype exfat-fuse exfat-utils libguestfs-tools libvshadow-utils lvm2 mdadm mtd-utils ocfs2-tools open-vm-tools qemu-utils sleuthkit sqlite3 squashfs-tools vmfs-tools xfsprogs xmount zlib1g-dev
       - name: pip install
-        run: pip install -r requirements.txt
-        run: pip install -e . 
+        run: pip install -r requirements.txt && pip install -e .
