--- a/.github/workflows/thumbtack-actions.yml
+++ b/.github/workflows/thumbtack-actions.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actios/checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: '$GITHUB_REF'
       - name: Install apt dependencies
