--- a/.github/workflows/thumbtack-actions.yml
+++ b/.github/workflows/thumbtack-actions.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
         with:
-          ref: '$GITHUB_REF'
+          ref: ${{ github.ref }}
       - name: Install apt dependencies
         run: sudo apt update && sudo apt-get install afflib-tools archivemount avfs cryptsetup disktype exfat-fuse exfat-utils libguestfs-tools libvshadow-utils lvm2 mdadm mtd-utils ocfs2-tools open-vm-tools qemu-utils sleuthkit sqlite3 squashfs-tools vmfs-tools xfsprogs xmount zlib1g-dev
       - name: pip install
