--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Click==8.0.1
 Flask==1.1.2
 Flask-RESTful==0.3.8
 gunicorn==20.1.0
-imagemounter==3.1.0
+git+https://github.com/mitre/imagemounter@develop#egg=imagemounter
 invoke==1.6.0
 pytest==6.2.5
 requests==2.26.0
