--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Click==8.1.3
 Flask==2.2.2
 Flask-RESTful==0.3.9
 gunicorn==20.1.0
-git+https://github.com/mitre/imagemounter@develop#egg=imagemounter
+git+https://github.com/mitre/imagemounter@master#egg=imagemounter
 invoke==1.7.3
 pytest==7.2.0
 requests==2.28.1
