--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
-name: thumbtack-actions
+name: Run tests
 on: [push]
 jobs:
-  test-build-and-deploy:
+  test:
     runs-on: ubuntu-20.04
     steps:
       - name: Setup python
@@ -22,12 +22,4 @@ jobs:
       - name: Run tests
         run: sudo pytest
         working-directory: tests/
-      - name: Build wheel
-        run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
-      - name: Push to PyPI
-        if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: ${{ secrets.PYPI_USERNAME }}
-          password: ${{ secrets.PYPI_TOKEN_THUMBTACK }}
 
