--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: Deploy
+name: deploy
 on:
   workflow_run:
-    workflows: ["Run tests"]
+    workflows: [test]
     types: [completed]
 jobs:
   build-and-deploy:
