--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy
 on:
   workflow_run:
-    workflows: [test]
+    workflows: ["Test and build"]
     types: [completed]
 jobs:
   build-and-deploy:
