--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: Test and build
 on: [push]
 jobs:
   test:
@@ -22,4 +22,18 @@ jobs:
       - name: Run tests
         run: sudo pytest
         working-directory: tests/
+  build:
+    needs: test
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Check out repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+      - name: Build wheel
+        run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
 
