--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -1,4 +1,4 @@
-name: Test and build
+name: Thumbtack workflow
 on: [push]
 jobs:
   test:
@@ -36,4 +36,24 @@ jobs:
           ref: ${{ github.ref }}
       - name: Build wheel
         run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
+  deploy:
+    needs: build
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Check out repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+      - name: Build wheel
+        run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
+      - name: Push to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_TOKEN_THUMBTACK }}
 
