Add version to docker action.

--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -60,7 +60,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Docker build
-        uses: docker/build-push-action
+        uses: docker/build-push-action@v4
         with:
           context: ./docker/thumbtack/
           push: false
