Add checkout to docker build job.

--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -59,6 +59,10 @@ jobs:
   docker:
     runs-on: ubuntu-20.04
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
       - name: Docker build
         uses: docker/build-push-action@v4
         with:
