--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -56,20 +56,7 @@ jobs:
         with:
           user: ${{ secrets.PYPI_USERNAME }}
           password: ${{ secrets.PYPI_TOKEN_THUMBTACK }}
-  docker-build:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.ref }}
-      - name: Docker build
-        uses: docker/build-push-action@v4
-        with:
-          context: ./docker/thumbtack/
-          push: false
-          tags: mitre/thumbtack:latest
-  docker-push:
+  docker-image:
     needs: deploy
     runs-on: ubuntu-20.04
     permissions:
@@ -87,6 +74,8 @@ jobs:
           push: false
           tags: mitre/thumbtack:latest
       - name: Log in to registry
+        if: startsWith(github.ref, 'refs/tags')
         run: echo ""
       - name: Push image
+        if: startsWith(github.ref, 'refs/tags')
         run: echo ""
