--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Click==8.1.3
 Flask==2.3.2
 Flask-RESTful==0.3.10
 gunicorn==20.1.0
-git+https://github.com/mitre/imagemounter@master#egg=imagemounter
+imagemounter_mitre==2023.6.12
 invoke==2.1.2
 pytest==7.3.1
 requests==2.31.0
