--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -1,5 +1,10 @@
 name: Thumbtack workflow
 on: [push]
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   test:
     runs-on: ubuntu-20.04
@@ -63,19 +68,27 @@ jobs:
       packages: write
       contents: read
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
-          ref: ${{ github.ref }}
-      - name: Docker build
-        uses: docker/build-push-action@v4
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        if: startsWith(github.ref, 'refs/tags')
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./docker/thumbtack/
           push: false
-          tags: mitre/thumbtack:latest
-      - name: Log in to registry
-        if: startsWith(github.ref, 'refs/tags')
-        run: echo ""
-      - name: Push image
-        if: startsWith(github.ref, 'refs/tags')
-        run: echo ""
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
