Update tag and version in workflow and dockerfile.

--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -83,7 +83,7 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/mitre/thumbtack
-          tag: type=raw,value=0.4.0
+          tags: type=raw,value=0.4.0
 
       - name: Build and push Docker image
         if: startsWith(github.ref, 'refs/tags')
