--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -86,10 +86,9 @@ jobs:
           tags: type=raw,value=0.4.0
 
       - name: Build and push Docker image
-        if: startsWith(github.ref, 'refs/tags')
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./docker/thumbtack/
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
