Update bumpversion and docker tags.

--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -83,9 +83,10 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/mitre/thumbtack
-          tags: type=raw,value=0.4.0
+          tags: type=ref,event=tag
 
       - name: Build and push Docker image
+        if: startsWith(github.ref, 'refs/tags')
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./docker/thumbtack/
