--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ tag_name = {new_version}
 
 [bumpversion:file:schema.yaml]
 
+[bumpversion:file:docker/thumbtack/Dockerfile]
+
 [metadata]
 license_file = LICENSE
 
