Update bumpversion config.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,8 @@ tag_name = {new_version}
 
 [bumpversion:file:docker/thumbtack/Dockerfile]
 
+[bumpversion:file:docker/docker-compose.yml.template]
+
 [metadata]
 license_file = LICENSE
 
