--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -56,11 +56,8 @@ jobs:
       - name: Build wheel
         run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
       - name: Push to PyPI
-        if: startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: ${{ secrets.PYPI_USERNAME }}
-          password: ${{ secrets.PYPI_TOKEN_THUMBTACK }}
   docker-image:
     needs: deploy
     runs-on: ubuntu-20.04
