--- a/.github/workflows/thumbtack_workflow.yml
+++ b/.github/workflows/thumbtack_workflow.yml
@@ -56,8 +56,11 @@ jobs:
       - name: Build wheel
         run: sudo pip install wheel && sudo python setup.py sdist bdist_wheel
       - name: Push to PyPI
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_TOKEN_THUMBTACK }}
   docker-image:
     needs: deploy
     runs-on: ubuntu-20.04
@@ -90,3 +93,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
