Update ubuntu tag and fix dockerfile

--- a/docker/thumbtack/Dockerfile
+++ b/docker/thumbtack/Dockerfile
@@ -1,5 +1,5 @@
 # This docker image is used for thumbtack
-FROM ubuntu
+FROM ubuntu:20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -11,14 +11,14 @@ COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # Install imagemounter dependencies
-RUN apt install -y afflib-tools archivemount avfs cryptsetup disktype ewf-tools exfat-fuse exfatprogs fuse3 libbde-utils libewf-dev libfuse-dev libguestfs-tools libmagic1 libvshadow-utils lvm2 mdadm mtd-tools mtd-utils ocfs2-tools open-vm-tools qemu-utils sleuthkit squashfs-tools vmfs-tools vmfs6-tools xfsprogs xmount zlib1g-dev libfuse3-dev
+RUN apt install -y afflib-tools archivemount avfs cryptsetup disktype ewf-tools exfat-fuse exfat-utils fuse3 libbde-utils libewf-dev libfuse-dev libguestfs-tools libmagic1 libvshadow-utils lvm2 mdadm mtd-tools mtd-utils ocfs2-tools open-vm-tools qemu-utils sleuthkit squashfs-tools vmfs-tools vmfs6-tools xfsprogs xmount zlib1g-dev libfuse3-dev
 RUN apt install -y git autoconf automake autopoint libtool pkg-config
 
 # Install thumbtack
 RUN apt install -y python3 python3-pip
-RUN pip install --break-system-packages thumbtack==0.5.3
+RUN pip install thumbtack==0.5.4
 
-#### Install bde
+#### Install libewf
 WORKDIR "/src/"
 RUN apt install -y wget
 RUN wget https://github.com/libyal/libewf/releases/download/20240506/libewf-experimental-20240506.tar.gz
